增加状态码 非法的版本格式: [{0}]

--- a/src/main/resources/i18n/result_message_en_US.properties
+++ b/src/main/resources/i18n/result_message_en_US.properties
@@ -21,3 +21,4 @@ B00003=File access failed
 B00004=non-existent file
 C00014=Gender parameter does not exist: [{0}] Only supports: {1}
 C00015=Unsupported request method: [{0}]
+C00016=Illegal version format: [{0}]
