增加状态码/国际化信息

--- a/src/main/resources/i18n/result_message_en_US.properties
+++ b/src/main/resources/i18n/result_message_en_US.properties
@@ -22,3 +22,6 @@ B00004=non-existent file
 C00014=Gender parameter does not exist: [{0}] Only supports: {1}
 C00015=Unsupported request method: [{0}]
 C00016=Illegal version format: [{0}]
+C00017=The data to be modified does not exist: [{0}]
+B00005=The group name already exists
+B00006=Default grouping cannot be modified
