增加状态码 不存在该分组信息

--- a/src/main/resources/i18n/result_message_en_US.properties
+++ b/src/main/resources/i18n/result_message_en_US.properties
@@ -25,3 +25,4 @@ C00016=Illegal version format: [{0}]
 C00017=The data to be modified does not exist: [{0}]
 B00005=The group name already exists
 B00006=Default grouping cannot be modified
+B00007=The group information does not exist
