--- a/src/main/resources/i18n/result_message_en_US.properties
+++ b/src/main/resources/i18n/result_message_en_US.properties
@@ -26,3 +26,4 @@ C00017=The data to be modified does not exist
 B00005=The group name already exists
 B00006=Default grouping cannot be modified
 B00007=The group information does not exist
+B00008=Blog information does not exist
